Fixed bug that leads to x axis overflow

--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -50,7 +50,7 @@
   }
 
   .bg-text-container {
-    width: 100vw;
+    width: 96.72vw;
     border-radius: 0;
     padding: 24px;
   }
